heading and pragraph add this line

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Travel-Blog</title>
 </head>
 <body>
-    
+    <!-- head tag start  -->
+    <h1><i>My Travel Blog</i></h1>
+    <!-- head tag end  -->
+    <div>
+        <p>
+            Last night, instead of bird song to lull me to sleep, it was voices and clatter in the narrow street below, coming through the slatted windows. Did not keep me from going to sleep immediately. Our walking tour of Stone Town started at the hotel’s door, a few steps from the Old Fort . Taib related its history: the Omanis had already established a dynamic spice trade in Zanzibar by 1503 when Vasco da Gama defeated them. For 200 years the Portuguese controlled the country until about 1699 when the Omanis reconquered Zanzibar.
+        </p>
+    </div>
 </body>
 </html>
