img and order,unorder list add

--- a/index.html
+++ b/index.html
@@ -10,9 +10,28 @@
     <h1><i>My Travel Blog</i></h1>
     <!-- head tag end  -->
     <div>
+        <!-- prahraph start  -->
         <p>
             Last night, instead of bird song to lull me to sleep, it was voices and clatter in the narrow street below, coming through the slatted windows. Did not keep me from going to sleep immediately. Our walking tour of Stone Town started at the hotel’s door, a few steps from the Old Fort . Taib related its history: the Omanis had already established a dynamic spice trade in Zanzibar by 1503 when Vasco da Gama defeated them. For 200 years the Portuguese controlled the country until about 1699 when the Omanis reconquered Zanzibar.
         </p>
+        <!-- pragraph end  -->
     </div>
+    <button>Read More</button><br>
+    <b><span>What I bought</span></b>
+    <b>My favourite food</b>
+    <ol>
+        <li>lichu</li>
+        <li>anaros</li>
+        <li>jackfoot</li>
+        <li>mango</li>
+    </ol>
+    <ul>
+        <li>other</li>
+        <li>vagitable</li>
+        <li>eggs</li>
+        <li>rice</li>
+    </ul>
+    <!-- food image  -->
+    <img src="image/food.jpg" alt="food" width="300px" >
 </body>
 </html>
